--- a/shared/src/commonMain/resources/i18n/zh.json
+++ b/shared/src/commonMain/resources/i18n/zh.json
@@ -8,5 +8,12 @@
   "playerName": "玩家名称",
   "enterName": "请输入你的名称",
   "randomName": "随机名称",
-  "settings": "游戏设置"
+  "settings": "游戏设置",
+  "start": "Start",
+  "you": "You",
+  "west": "West",
+  "north": "North",
+  "east": "East",
+  "info_you_return": "Select a card to play, or draw a card from deck",
+  "welcome_and_start": "WELCOME TO CARD GAME, CLICK TO START"
 }
